<resources>
    <string name="app_name">ustb_choose_course_system</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="stu_number">学号：</string>
    <string name="password">密码：</string>
    <string name="login">登陆</string>
    <string name="logout">注销</string>
    <string name="notice">说明</string>
    <string name="search">查询</string>
    <string name="input_search_semester">输入查询学期:</string>
    <string name="after_choose_course">退步选课</string>
    <string name="pre_choose_course">预选课</string>
    <string name="search_class_table">课表查询</string>
    <string name="search_exam_alignment">考试安排查询</string>
    <string name="about_soft">关于本软件</string>
    <string name="checkout_update">检查软件更新</string>
    <string name="save_pass">记住密码</string>


</resources>
